--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.13.0",
     "react-scripts": "^5.0.0",
@@ -26,6 +27,7 @@
     "redux": "^4.2.1",
     "rxfire": "^6.0.3",
     "rxjs": "^7.8.1",
+    "styled-components": "^6.0.8",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
